force-app/main/default/objects/eClass__mdt/eClass__mdt.object-meta.xml
<CustomObject>
    <label>eClass</label>
    <pluralLabel>eClasses</pluralLabel>
</CustomObject>