force-app/main/default/objects/eClass__mdt/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>