force-app/main/default/objects/eClass__mdt/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>